# django-react

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  post_create.sh
backend/: Dockerfile  manage.py  pyproject.toml
backend/app/: data.py  fixtures.py  models.py  schema.py  urls.py  views.py
backend/app/management/commands/: install_fixtures.py
backend/app/migrations/: 0001_initial.py
backend/app/templates/app/: index.html
backend/djangoreact/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .eslintrc.js  index-django.html  index.html  index.js  index.ts  package.json  render.js  render.tsx  schema.graphql  tsconfig.json
frontend/.storybook/: decorators.tsx  preview.js
frontend/src/: environment.ts  fetchGraphql.ts
frontend/src/components/: App.tsx  Athletes.jsx  Athletes.tsx  AthletesPage.tsx  Button.jsx  ColumnToggle.tsx  Countries.jsx  Countries.tsx  CountriesPage.jsx  CountriesPage.tsx  Country.tsx  CountryFlag.jsx  CountryFlag.tsx  DataTable.jsx  DataTable.tsx  Heading.jsx  Medals.tsx  MedalsPage.jsx  Navbar.jsx  Navbar.tsx  Page.jsx  Page.tsx  Paginator.jsx  Paginator.tsx  Sports.tsx  SportsPage.jsx  index.js  index.ts
frontend/src/containers/: Athletes.tsx  Countries.jsx  Countries.tsx  Medals.tsx  Sports.tsx  Styles.jsx  Styles.tsx  index.ts
frontend/src/lib/: client.js  index.ts  mount.js  mount.tsx  utils.ts  withLazyLoadQuery.tsx
frontend/src/stories/: Button.stories.jsx  ColumnToggle.stories.jsx  Country.stories.tsx  CountryList.stories.tsx  DataTable.stories.jsx  Home.stories.jsx  Navbar.stories.jsx  (+2 more)
(+16 files in other folders)
